<resources>
    <string name="app_name">天天食谱</string>

    <string name="FirstPage">首页</string>
    <string name="life">生活圈</string>
    <string name="about">我的</string>
    <string name="search">搜索</string>
    <string name="detail">详情</string>
    <string name="style">类型</string>
    <string name="search_hint">请输入关键字</string>
    <string name="collection_hint">您的收藏夹\n空空如也!</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="user_name">用户名/手机号</string>
    <string name="user_name1">用户名</string>
    <string name="user_password">密码</string>
    <string name="forget_text">忘记密码？</string>
    <string name="phone_number">手机号</string>
    <string name="message_number">验证码</string>
    <string name="get_messagenumber">获取验证码</string>
    <string name="user_check_password">确认密码</string>


    <string name="describe">概括描述
    </string>
    <string name="food">材料
    </string>
    <string name="keywords">关键步骤
    </string>
    <string name="message">做法详情
    </string>

    <string name="type1">农家菜</string>
    <string name="type2">素菜</string>
    <string name="type3">荤菜</string>
    <string name="type4">减肥</string>
    <string name="type5">烘焙</string>
    <string name="type6">创意菜</string>
    <string name="type7">开胃菜</string>
    <string name="type8">面食</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_food_list">FoodListActivity</string>
    <string name="title_activity_full">FullActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_resiter">ResiterActivity</string>
    <string name="title_activity_modify_psw">ModifyPsw</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="undefined">Undefined</string>
    <string name="click_the_button">Click the \'Red\' button</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string-array name="languages">
        <item>农家菜</item>
        <item>素菜</item>
        <item>荤菜</item>
        <item>减肥</item>
        <item>烘焙</item>
        <item>创意菜</item>
        <item>开胃菜</item>
        <item>面食</item>
    </string-array>
    <string-array name="postType">
        <item>秀厨艺</item>
        <item>闲聊</item>
        <item>养生小知识</item>
        <item>随感</item>
    </string-array>

</resources>
