<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@id/activity_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@mipmap/login_bg_logo" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="____________________欢迎注册____________________"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/phone_number"
                android:paddingLeft="15dp"
                android:textCursorDrawable="@drawable/cursor_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/message_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/message_number"
                    android:paddingLeft="15dp"
                    android:textCursorDrawable="@drawable/cursor_bg" />

                <TextView
                    android:id="@+id/register_check_number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg"
                    android:gravity="center"
                    android:text="@string/get_messagenumber" />
            </LinearLayout>

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/user_name1"
                android:paddingLeft="15dp"
                android:textCursorDrawable="@drawable/cursor_bg" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/user_password"
                android:paddingLeft="15dp"
                android:textCursorDrawable="@drawable/cursor_bg" />

            <EditText
                android:id="@+id/register_check_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:hint="@string/user_check_password"
                android:paddingLeft="15dp"
                android:textCursorDrawable="@drawable/cursor_bg" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/login_btn_bg"
                android:text="注 册"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

